tests-integration/fixtures/checking/125_instance_member_overly_general/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
show :: forall (a :: Type). Show (a :: Type) => (a :: Type) -> String

Types
Show :: Type -> Constraint

Classes
class Show (&0 :: Type)

Instances
instance Show (Boolean :: Type)
  chain: 0

Diagnostics
error[CannotUnify]: Cannot unify 'forall (a :: Type). (a :: Type) -> String' with 'Boolean -> String'
  --> 6:1..8:18
  |
6 | instance Show Boolean where
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~
error[InstanceMemberTypeMismatch]: Instance member type mismatch: expected 'Boolean -> String', got 'forall (a :: Type). (a :: Type) -> String'
  --> 6:1..8:18
  |
6 | instance Show Boolean where
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~
